tela-fem-finalizada

--- a/fem.html
+++ b/fem.html
@@ -9,44 +9,44 @@
     <link rel="stylesheet" href="assets/css/header.css">
     <link rel="stylesheet" href="/assets/css/masc.css">
     <link rel="stylesheet" href="assets/css/nav-bar.css">
-    <title>Masculino</title>
+    <title>Feminino</title>
 </head>
 <body>
     <header>
         <h1>ALLIN</h1>
     </header>
      <main>
-        <h1 class="title">Moda Masculina</h1>
+        <h1 class="title">Moda Feminina</h1>
          <div>
             <h1 class="title-blusas">Blusas</h1>
             <div class="cards">
                 <div>
-                    <img src="assets/img/masc-img.svg" alt="">
+                    <img src="assets/img/fem-1.svg" alt="">
                     <p>Blusa</p>
                     <p class="font-title">R$79,90</p>
                     <P>3x R$26,63</P>
                 </div>
 
                 <div>
-                    <img src="assets/img/masc-img1.svg" alt="" srcset="">
+                    <img src="assets/img/fem-2.svg" alt="" srcset="">
                     <p>Blusa</p>
                     <p class="font-title">R$79,90</p>
                     <P>3x R$26,63</P>
                 </div>
             </div>
          
-            <h1 class="title-blusas">Bermudas</h1>
+            <h1 class="title-blusas">Shorts e Saias</h1>
             <div class="cards">
                 <div>
-                    <img src="assets/img/masc-img2.svg" alt="">
-                    <p>Bermuda</p>
+                    <img src="assets/img/fem-3.svg" alt="">
+                    <p>Short</p>
                     <p class="font-title">R$79,90</p>
                     <P>3x R$26,63</P>
                 </div>
 
                 <div>
-                    <img src="assets/img/masc-img3.svg" alt="" srcset="">
-                    <p>Bermuda</p>
+                    <img src="assets/img/fem-4.svg" alt="" srcset="">
+                    <p>Saia</p>
                     <p class="font-title">R$79,90</p>
                     <P>3x R$26,63</P>
                 </div>
