--- a/login.html
+++ b/login.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="assets/css/root.css">
     <link rel="stylesheet" href="assets/css/header.css">
     <link rel="stylesheet" href="assets/css/login.css">
+    <link rel="stylesheet" href="assets/css/button.css">
     <link rel="stylesheet" href="assets/css/nav-bar.css">
     <title>Document</title>
 </head>
